--- a/models_list_displaying/templates/books/book_date.html
+++ b/models_list_displaying/templates/books/book_date.html
@@ -18,10 +18,10 @@
         </div>
 
     {% if b_prev %}
-        <a class="button button-primary" href="{{ b_prev }}"><< {{ b_prev }}</a>
+        <a class="button button-primary" href="{{ b_prev }}"><<<< {{ b_prev }}</a>
     {% endif %}
     {% if b_next %}
-        <a class="button button-primary" href="{{ b_next }}">{{ b_next }} >></a>
+        <a class="button button-primary" href="{{ b_next }}">{{ b_next }} >>>></a>
     {% endif %}
     </div>
 {% endblock %}
